name: knob
version: 0.1
license: MIT
license-file: license.txt
author: John Millikin <jmillikin@gmail.com>
maintainer: John Millikin <jmillikin@gmail.com>
build-type: Simple
cabal-version: >= 1.6
category: System
stability: experimental
homepage: https://john-millikin.com/software/knob/
bug-reports: mailto:jmillikin@gmail.com

synopsis: Memory-backed handles

source-repository head
  type: bazaar
  location: https://john-millikin.com/software/knob/

source-repository this
  type: bazaar
  location: https://john-millikin.com/branches/knob/0.1/
  tag: knob_0.1

library
  hs-source-dirs: lib
  ghc-options: -Wall -O2

  build-depends:
      base >= 4.2 && < 5.0
    , bytestring >= 0.9 && < 0.10

  exposed-modules:
    Data.Knob
